test/types/file/freadNotABoolean.good
freadNotABoolean.chpl:6: error: halt reached - read of bool value that is neither true nor false
